fix(mobile): Tighten up EmailSignup, fix index top link wrapping

--- a/src/components/EmailSignup.module.less
+++ b/src/components/EmailSignup.module.less
@@ -5,7 +5,7 @@
   border: 1px @orange solid;
   background-color: fade(@orange, 15%);
   margin-bottom: 2em;
-  padding-top: 1.5em;
+  padding-top: 0.5em;
   padding-bottom: 0.5em;
   text-align: center;
   color: @orange;
